fix navigation on mobile and fade animations

--- a/styles/sass/_header.sass
+++ b/styles/sass/_header.sass
@@ -53,7 +53,11 @@
         box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.1)
 
 // MEDIA QUERIES
-@media (min-width: $extra-small) and (max-width: $small)
+@media (min-width: $extra-small) and (max-width: $medium)
     .header
         &__title
             font-size: $font-size-mega
+
+            &--small
+                top: 1.3rem
+                font-size: $font-size-kilo
